--- a/Dockerfile.develop
+++ b/Dockerfile.develop
@@ -88,13 +88,13 @@ RUN true\
 
 # Cache dependencies before copying and building sources so that source changes
 # won't invalidate earlier download layers
-RUN go mod download
+RUN http_proxy=${http_proxy} https_proxy=${https_proxy} go mod download
 
 # Install controller-gen
 RUN true \
     && mkdir /tmp/controller-gen-tmp && cd /tmp/controller-gen-tmp \
-    && go mod init tmp \
-    && go get sigs.k8s.io/controller-tools/cmd/controller-gen@${CONTROLLER_GEN_VERSION} \
+    && http_proxy=${http_proxy} https_proxy=${https_proxy} go mod init tmp \
+    && http_proxy=${http_proxy} https_proxy=${https_proxy} go get sigs.k8s.io/controller-tools/cmd/controller-gen@${CONTROLLER_GEN_VERSION} \
     && rm -rf /tmp/controller-gen-tmp \
     && true
 
