--- a/config/default/config-defaults.yaml
+++ b/config/default/config-defaults.yaml
@@ -38,8 +38,8 @@ restProxy:
       cpu: "1"
       memory: "512Mi"
 storageHelperImage:
-  name: kserve/modelmesh-runtime-adapter
-  tag: latest
+  name: registry.toolbox.iotg.sclab.intel.com/kserve/modelmesh-runtime-adapter
+  tag: dev
   command: ["/opt/app/puller"]
 storageHelperResources:
   requests:
