--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -16,6 +16,6 @@ resources:
 
 images:
   - name: modelmesh-controller
-    newName: kserve/modelmesh-controller
+    newName: registry.toolbox.iotg.sclab.intel.com/kserve/modelmesh-controller
     ## NOTE THIS SHOULD BE REPLACED WITH LATEST CONTROLLER IMAGE TAG
-    newTag: latest
+    newTag: dev
