--- a/config/runtimes/kustomization.yaml
+++ b/config/runtimes/kustomization.yaml
@@ -27,8 +27,8 @@ images:
     newTag: "0.5.2"
 
   - name: ovms-1
-    newName: openvino/model_server
-    newTag: "2022.2"
+    newName: registry.toolbox.iotg.sclab.intel.com/openvino/model_server
+    newTag: "mkulakow-dev"
 
   - name: torchserve-0
     newName: pytorch/torchserve
